--- a/picster/res/values/strings.xml
+++ b/picster/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="app_name">picster</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Hello Allen!</string>
 
 </resources>
