--- a/picster/res/values/strings.xml
+++ b/picster/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">picster</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello Allen!</string>
+    <string name="title_activity_login">Login</string>
 
 </resources>
