--- a/picster/res/values/strings.xml
+++ b/picster/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">picster</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello Allen!</string>
+    <string name="add_picture">Add Picture</string>
     <string name="title_activity_login">Login</string>
 
 </resources>
